samples/_failures_safe/1761145398_5746c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfffe557.c: In function ‘tokenize’:
./samples/SAFE/__tmp_dfffe557.c:146:5: error: expected expression at end of input
  146 |     if (state ==
      |     ^~
./samples/SAFE/__tmp_dfffe557.c:146:5: error: expected declaration or statement at end of input
